LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Assignment_Rules__c/Account_Assignment_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Account Assignment Rules</label>
</CustomObject>