LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Assignment_Rules__c/fields/Parent_Rule__c.field-meta.xml
<CustomField>
    <fullName>Parent_Rule__c</fullName>
    <label>Parent Rule</label>
    <length>50</length>
    <type>Text</type>
</CustomField>