LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Assignment_Rules__c/fields/Rule_Order__c.field-meta.xml
<CustomField>
    <fullName>Rule_Order__c</fullName>
    <label>Rule Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>