LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Assignment_Rules__c/fields/State_Code_OR__c.field-meta.xml
<CustomField>
    <fullName>State_Code_OR__c</fullName>
    <label>State Code OR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>