LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Assignment_Rules__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>250</length>
    <type>Text</type>
</CustomField>