LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Assignment_Rules__c/listViews/Account_Assigment_Detail.listView-meta.xml
<ListView>
    <fullName>Account_Assigment_Detail</fullName>
    <columns>NAME</columns>
    <columns>Region__c</columns>
    <columns>Rule_Order__c</columns>
    <columns>State_Code_OR__c</columns>
    <columns>State_Code__c</columns>
    <columns>Postal_Code__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <label>Account Assigment Detail</label>
</ListView>